fix span aler error

--- a/src/components/Order/Order.module.css
+++ b/src/components/Order/Order.module.css
@@ -47,6 +47,11 @@
     outline: 2px solid #282828;
 }
 
+.form__order__row--item span {
+    margin-top: 7px;
+    color: var(--red);
+}
+
 /* select address */
 .form__order__row--address {
     display: flex;
@@ -105,197 +110,3 @@
         width: 100%;
     }
 }
-
-/* order
-.order {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-}
-
-.order h1 {
-    margin-bottom: 20px;
-    padding: 5px;
-    color: var(--gray-dark);
-}
-
-.order .info-user {
-    margin-top: 10px;
-    padding: 0 30px;
-    width: 80%;
-}
-
-.order .info-user .row {
-    width: 100%;
-    display: flex;
-}
-
-.order .info-user .row .row-item {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-.order .info-user .row label,
-.order .info-user .row input {
-    margin-bottom: 10px;
-    padding: 5px;
-    font-size: var(--font-size-tag-p);
-}
-
-.order .info-user .row input {
-    border-radius: 4px;
-    border: 0.5px solid hsl(0, 0%, 80%);
-}
-
-.order .info-user .row input:focus {
-    outline: 2.5px solid var(--blue);
-}
-
-.order .info-user .row span {
-    font-size: var(--font-size-tag-p);
-    color: var(--red);
-    margin-bottom: 10px;
-}
-
-.order .info-user .row label {
-    width: 40%;
-}
-
-.order .action {
-    margin-top: 10px;
-    width: 20%;
-}
-
-.order .action h2 {
-    font-size: var(--font-size-tag-p);
-    font-weight: 300;
-}
-.order .action h2:last-child {
-    font-size: var(--font-size-heading-three);
-    color: var(--red);
-}
-
-.order .action .cost {
-    display: flex;
-    justify-content: space-between;
-}
-
-.order .action button {
-    margin-top: 10px;
-    width: 100%;
-    padding: 10px;
-    font-size: var(--font-size-tag-p);
-    cursor: pointer;
-    color: var(--white);
-    background-color: var(--gray);
-    border: none;
-    border-radius: 5px;
-}
-
-.order .action button:hover {
-    background-color: var(--gray-dark);
-}
-
-.order .action .coupon {
-    margin: 68px 0 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.order .action .coupon input {
-    width: 100%;
-    outline: none;
-    font-size: 1.2rem;
-    padding: 5px;
-    border-radius: 4px;
-    border: 0.5px solid hsl(0, 0%, 80%);
-}
-
-.order .action .coupon input:focus {
-    outline: 2.5px solid var(--blue);
-}
-
-.order .action .coupon .coupon-button {
-    width: 100%;
-    padding: 10px;
-    text-align: center;
-    background-color: var(--gray);
-    border-radius: 5px;
-    font-size: 1.2rem;
-    color: var(--white);
-    cursor: pointer;
-}
-
-.order .action .coupon .coupon-button:hover {
-    background-color: var(--gray-dark);
-}
-
-.order .action .coupon .coupon-apply {
-    font-size: 1.2rem;
-    color: var(--red);
-}
-
-/* css address */
-/* .address {
-    width: 100%;
-    margin: 10px 0;
-    display: flex;
-    gap: 10px;
-}
-
-.address .select {
-    width: 33.3%;
-    font-size: var(--font-size-tag-p);
-}
-
-.row .select-method {
-    width: 100%;
-    font-size: var(--font-size-tag-p);
-}
-
-@media only screen and (max-width: 1500px) {
-    .order .action .cost {
-        gap: 10px;
-        flex-direction: column;
-        margin-bottom: 10px;
-    }
-}
-
-@media only screen and (max-width: 1200px) {
-    .order {
-        flex-direction: column;
-    }
-
-    .order .info-user {
-        padding: 0;
-    }
-
-    .order .info-user,
-    .order .action {
-        width: 100%;
-    }
-
-    .order .action .cost {
-        flex-direction: row;
-    }
-}
-
-@media only screen and (max-width: 500px) {
-    .order .info-user {
-        padding: 0;
-    }
-
-    .order .info-user .row {
-        flex-direction: column;
-    }
-
-    .order .info-user .row label {
-        width: 100%;
-    }
-
-    .order .info-user .row input {
-        width: 100%;
-    }
-} */
