--- a/src/pages/register/Register.module.css
+++ b/src/pages/register/Register.module.css
@@ -1,100 +1,86 @@
 .container {
-    margin: 100px 0;
-    display: grid;
-    place-items: center;
-    background-color: transparent;
+    background-image: url('https://cdn.mos.cms.futurecdn.net/hofAQNpgapKkMXKKvUqPQb.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
 }
 
-.wrapper {
-    width: 380px;
-    background-color: var(--white);
-}
-
-.wrapper .title {
-    line-height: 80px;
-    background-color: var(--gray);
-    font-size: var(--font-size-heading-one);
-    font-weight: var(--font-weight-heading-one);
-    text-align: center;
-    color: var(--white);
-}
-
-.wrapper form {
-    padding: 30px 20px 40px 20px;
-}
-
-.wrapper form .row {
-    height: 45px;
-    margin-bottom: 25px;
-    position: relative;
-}
-
-.wrapper form .row span {
-    color: var(--red);
-    font-weight: 600;
-}
-
-.wrapper form .row .icon {
-    width: 47px;
-    height: 100%;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--white);
-    font-size: var(--font-size-heading-four);
-    background-color: var(--gray);
-}
-
-.wrapper form .row input {
-    padding-left: 60px;
+.container--filter {
     width: 100%;
     height: 100%;
-    outline: none;
-    border: 1px solid var(--gray);
-    font-size: var(--font-size-heading-four);
+    display: grid;
+    place-items: center;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.register {
+    padding: 10px 30px;
+    background-color: #fff;
+}
+
+.register--heading h1 {
+    width: 100%;
+    font-size: 28px;
+    font-weight: 300;
+    text-align: center;
+}
+
+.row {
+    margin: 10px 0;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.icon {
+    position: absolute;
+    transform: translate(50%, 65%);
+}
+
+.row input {
+    padding: 9px 0 9px 30px;
+    font-size: 14px;
+    border: 1px solid hsl(0, 0%, 80%);
+}
+
+.row span {
+    color: var(--red);
 }
 
 .row button {
-    width: 100%;
-    height: 47px;
-    border: none;
-    color: var(--white);
-    font-size: var(--font-size-heading-four);
-    background-color: var(--gray);
+    padding: 7px 10px;
+    outline: none;
+    color: #fff;
+    border: 1px solid #282828;
+    background-color: #282822;
     cursor: pointer;
 }
 
 .row button:hover {
-    background-color: var(--gray-dark);
+    background-color: #fff;
+    color: #282822;
 }
 
-.row .signup-link {
-    margin-top: 10px;
+.link {
     display: flex;
-    font-size: var(--font-size-heading-four);
+    justify-content: space-between;
+    gap: 7px;
+}
+
+.link a {
+    color: #282822;
+}
+
+.select {
+    display: flex;
     gap: 10px;
 }
 
-/* select */
-.select {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-bottom: 20px;
-}
-
-@media only screen and (max-height: 900px) {
-    .container {
-        margin-top: 100px;
-        margin-bottom: 50px;
+@media only screen and (max-width: 500px) {
+    .select {
+        flex-direction: column;
     }
-}
-
-@media only screen and (max-height: 700px) {
-    .container {
-        margin-top: 80px;
-        margin-bottom: 50px;
-        height: auto;
-    }
-}
+} ;
