update forgot password, but api is error in backend wait fix it

--- a/src/pages/login/Login.module.css
+++ b/src/pages/login/Login.module.css
@@ -74,3 +74,18 @@
 .link a {
     color: #282822;
 }
+
+.link span {
+    cursor: pointer;
+}
+
+/* CSS FORGOT PASSWORD */
+.forgot--container {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    display: grid;
+    place-items: center;
+    background-color: rgba(0, 0, 0, 0.8);
+}
