--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -202,6 +202,13 @@ header {
     width: 100%;
 }
 
+@media only screen and (max-width: 900px) {
+    .logo__item {
+        font-size: 20px;
+        color: #000000;
+    }
+}
+
 @media only screen and (max-width: 800px) {
     .logo {
         display: none;
