--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,9 +1,18 @@
 /* section */
 .home {
+    cursor: pointer;
     height: 100vh;
-    margin: 0 10%;
+    margin: 0;
     background-size: contain;
     background-repeat: no-repeat;
+}
+
+.filter {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    padding: 0 10%;
+
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     align-items: center;
@@ -15,11 +24,11 @@
 }
 
 .text h4 {
-    font-size: var(--font-size-heading-four);
-    font-weight: var(--font-weight-heading-four);
+    font-size: 18px;
+    font-weight: 400;
     text-transform: uppercase;
     letter-spacing: 10px;
-    color: var(--gray);
+    color: #fff;
     transition: 0.2s;
 }
 
@@ -28,13 +37,14 @@
     text-transform: capitalize;
     letter-spacing: 1px;
     line-height: 70px;
-    color: var(--gray-dark);
+    color: #fff;
+    font-weight: 600;
     transition: 0.2s;
 }
 
 .text p {
-    color: var(--dark);
-    font-size: var(--font-size-tag-p);
+    color: #fff;
+    font-size: 18px;
     text-transform: capitalize;
     max-width: 420px;
     line-height: 25px;
@@ -47,17 +57,20 @@
     margin-top: 10px;
     padding: 12px 40px;
     display: inline-block;
-    background-color: var(--gray);
-    color: var(--white);
-    font-size: var(--font-size-tag-p);
-    font-weight: var(--font-weight-heading-four);
+    background-color: transparent;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 300;
     text-transform: uppercase;
     letter-spacing: 1px;
+    border: 1px solid #fff;
     transition: all 0.42s;
 }
 
 .btn:hover {
-    background-color: var(--gray-dark);
+    border: 1px solid #282828;
+    background-color: #282828;
+    color: #fff;
 }
 
 @media only screen and (max-width: 1100px) {
