--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
     width: auto;
-    margin: 2% 5% 0;
-    padding: 2% 0;
+    margin: 0;
+    padding: 2% 5%;
     display: flex;
     justify-content: space-between;
     border-top: 1px solid #2828288e;
@@ -13,7 +13,7 @@
 }
 
 .footer__list li a {
-    font-size: 14px;
+    font-size: 16px;
     color: #282828;
 }
 
@@ -23,4 +23,10 @@
 
 .footer__copyright {
     opacity: 0.6;
+}
+
+@media only screen and (max-width: 650px) {
+    .footer__list {
+        flex-direction: column;
+    }
 }
