--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -20,7 +20,7 @@ header {
 }
 
 .logo__item {
-    font-size: 26px;
+    font-size: 24px;
     color: #000000;
 }
 
@@ -53,7 +53,7 @@ header {
 
 .menu__item--cart--icon {
     cursor: pointer;
-    font-size: 18px;
+    font-size: 16px;
     display: none;
 }
 
@@ -68,11 +68,11 @@ header {
 
 .menu__item__cart--number {
     position: absolute;
-    font-size: 14px;
+    font-size: 16px;
     color: #000000;
     top: 30%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-56%) translateY(-10%);
 }
 
 /* MENU ITEM CENTER */
@@ -92,7 +92,7 @@ header {
     padding: 5px;
     position: relative;
     color: #000000;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .menu__item--center nav a:after {
