--- a/src/components/product/Product.module.css
+++ b/src/components/product/Product.module.css
@@ -8,16 +8,28 @@
 }
 
 .product__header--sale {
-    color: #fff;
+    color: #282828;
+    font-size: 18px;
     position: absolute;
     padding: 3px;
     top: 0;
     left: 0;
-    background-color: #939393;
+}
+
+.product__header--link {
+    display: grid;
+    place-items: center;
 }
 
 .product__header--link--image {
-    width: 100%;
+    width: 200px;
+    height: 270px;
+    object-fit: contain;
+    transition: all 0.2s;
+}
+
+.product__header--link--image:hover {
+    transform: translateY(-10%);
 }
 
 .product__body {
@@ -37,11 +49,13 @@
     display: flex;
     top: 50%;
     left: -40%;
+    transition: all 0.2s;
 }
 
 .product__body--button:hover {
     color: #282828;
     background-color: #fff;
+    transform: translateY(-20%);
 }
 
 .product__body--button span {
@@ -53,6 +67,10 @@
     margin-top: 15px;
     color: #000;
     font-weight: 600;
+}
+
+.product__body--link:hover {
+    opacity: 0.7;
 }
 
 .product__body--sale {
