--- a/src/components/ProductCard/DetailProductCard.module.css
+++ b/src/components/ProductCard/DetailProductCard.module.css
@@ -12,7 +12,8 @@
 
 .container--left img {
     width: 90%;
-    height: fit-content;
+    max-height: 500px;
+    object-fit: contain;
 }
 
 .container--right {
@@ -30,11 +31,13 @@
     bottom: -10px;
     padding: 7px;
     font-size: 14px;
+    transition: all 0.2s;
 }
 
 .container--right__button:hover {
     color: #282828;
     background-color: #fff;
+    transform: translateY(-15%);
 }
 
 .container__information--name {
