--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -40,12 +40,12 @@
 }
 
 .product--container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 20px;
+    width: 90%;
+    display: grid;
+    margin: 0 auto;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-auto-rows: minmax(150px, auto);
+    gap: 50px 20px;
 }
 
 .product--item {
