--- a/src/pages/products/Products.module.css
+++ b/src/pages/products/Products.module.css
@@ -6,7 +6,7 @@
 
 .products {
     display: grid;
-    margin: 0 auto;
+    margin: 20px auto;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-auto-rows: minmax(150px, auto);
     gap: 50px 20px;
