--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -3,6 +3,7 @@
 }
 
 header {
+    position: relative;
     top: 0;
     width: 100%;
     background-color: #fff;
@@ -170,7 +171,11 @@ header {
 
 /* SEARCH BOX */
 .search__box {
-    position: absolute;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
     display: grid;
     place-items: center;
     width: 100%;
