--- a/src/components/ProductMenu/MenuProduct.module.css
+++ b/src/components/ProductMenu/MenuProduct.module.css
@@ -25,9 +25,11 @@
 }
 
 .container__filter {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
+    right: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(255, 255, 255, 0.98);
