--- a/src/pages/login/Login.module.css
+++ b/src/pages/login/Login.module.css
@@ -83,7 +83,7 @@
 .forgot--container {
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     display: grid;
     place-items: center;
